--- a/assets/main.css
+++ b/assets/main.css
@@ -2,3 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 @import "@fortawesome/fontawesome-free/css/all.min.css";
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+body{
+    font-family: "DM Sans", sans-serif;
+}
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px black;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #111111; 
+    border-radius: 15px;
+  }
+  
